tests/baselines/reference/mutuallyRecursiveGenericBaseTypes1.errors.txt
mutuallyRecursiveGenericBaseTypes1.ts(13,1): error TS2454: Variable 'b' is used before being assigned.


==== mutuallyRecursiveGenericBaseTypes1.ts (1 errors) ====
    interface A<T> {
        foo(): B<T>; // instead of B does see this
        foo(): void; // instead of B does see this
     
        foo2(): B<number>;
    }
     
    interface B<T> extends A<T> {
        bar(): void;
    }
     
    var b: B<number>;
    b.foo(); // should not error
    ~
!!! error TS2454: Variable 'b' is used before being assigned.
    
     
    